kubernetes/pvc/statefulset/mysql/ingress/ingress2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: qa 
spec:
  minReadySeconds: 5
  replicas: 1
  selector:
    matchLabels:
      app: qa 
  template:
    metadata:
      name: apache  
      labels: 
        app: qa 
    spec:
      containers:
        - name: apache
          image: httpd  
          ports: 
            - name: apache  
              containerPort: 80 
        

---

apiVersion: v1
kind: Service
metadata:
  name: ajaay-svc
  labels: 
    app: qa 
spec: 
  selector:
    app: qa
  ports: 
    - name: apache-re
      port: 80
      targetPort: 80
