kubernetes/pvc/statefulset/mysql/ingress/ingresssvc.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec: 
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http: 
        paths:
          - path: /nginx(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service: 
                name: ajay-svc
                port: 80
    - http: 
        paths:
          - path: /apache(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: ajaay-svc
                port: 80
